--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "reselect": "^3.0.0",
     "rheostat": "^2.1.1",
     "rich-marker": "^0.0.1",
+    "seamless-immutable": "^7.1.2",
     "styled-components": "^2.1.2",
     "uppy": "^0.18.0"
   },
