--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.1.0",
   "private": true,
   "dependencies": {
+    "actioncable": "^5.1.4",
     "antd": "^2.12.2",
     "antd-local-icon": "^0.1.3",
     "auth0-lock": "^10.19.0",
