Adding expire date for campaigns

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "iscroll": "^5.2.0",
     "lodash": "^4.17.4",
     "moment": "^2.18.1",
+    "moment-timezone": "^0.5.13",
     "nprogress": "^0.2.0",
     "postcss-inline-rtl": "^0.9.8",
     "prop-types": "^15.5.10",
